--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
 	},
 	"require": {
 		"php": ">=5.3.7",
-		"james-heinrich/getid3": "^1.9"
+		"james-heinrich/getid3": "^1.9",
+		"php-ffmpeg/php-ffmpeg": "^0.11.1",
+		"php-ffmpeg/extras": "^0.3.1"
 	},
 	"suggest": {
 		"paragonie/random_compat": "Provides better randomness in PHP 5.x"
